kubernetes-ingress/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: python-app-container
        image: ahmedatya11/python-app
        ports:
        - containerPort: 5000
