kubernetes-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app-svc  
spec:
  type: LoadBalancer
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    nodePort: 30033
  selector:
    app: python-app
