kubernetes-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /wear(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: python-app-svc
            port:
              number: 5000

      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: python-app-svc 
            port:
              number: 5000
